traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:19: error: reassignment to val
      y=y+1
       ^TraversalByColumn:22: error: reassignment to val
      y=0
       ^TraversalByColumn:23: error: reassignment to val
      x=x+1
       ^